<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context="com.example.projeksmester4.RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/Fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#11000000"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#11000000"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@android:color/white" />


    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#11000000"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/Confirmpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#11000000"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/already_having_account"
        android:textColor="#ccc" />

    <Button
        android:id="@+id/btnRegisterLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#aaa"
        android:text="@string/log_in"
        android:textColor="@android:color/white" />

</LinearLayout>
